# msa-toy

./: .aider.conf.yml  .gitignore  APP_SPEC.md  CONVENTIONS.md  DETAILS.md  DOCSTRINGS.md  LICENCE  PROGRESS.md  README  README.md  docstrings.json  docstrings.py  pyproject.toml  synthesis.py
msa/: app_config.yml  config.py  llm_config.yml  logging_config.py  main.py
msa/controller/: action_handler.py  components.py  main.py  models.py  observation_handler.py
msa/evaluation/: accuracy.py  completeness.py
msa/llm/: client.py
msa/memory/: manager.py  models.py  temporal.py
msa/monitoring/: metrics.py
msa/orchestration/: confidence.py  conflict.py  models.py  selector.py  synthesis.py
msa/tools/: base.py  cache.py  circuit_breaker.py  rate_limiter.py  web_search.py  wikipedia.py
tests/: test_action_handler.py  test_cache_datetime.py  test_cache_manager.py  test_circuit_breaker.py  test_confidence_scorer.py  test_config.py  test_conflict_resolver.py  test_controller_integration.py  test_controller_main.py  test_controller_models.py  test_error_handling.py  test_evaluation.py  test_integration_e2e.py  test_memory_manager.py  test_memory_models.py  test_memory_temporal.py  test_orchestration_models.py  test_performance_metrics.py  test_rate_limiter.py  test_synthesis_engine.py  test_tool_base.py  test_tool_selector.py  test_web_search_tool.py  test_wikipedia_tool.py
